# awesome-builder

./: .editorconfig  .gitignore  README.md  changelog.md
Common/bash/: find_big_file.sh
Common/python/: linux_tail_f.py  random_passwd.py
DockerFiles/celery/: Dockerfile  README.md
DockerFiles/goaccess/: Dockerfile  README.md
DockerFiles/lsyncd/: Dockerfile  README.md  entrypoint.sh
DockerFiles/postgresql/: README.md
Porjects/parallel-ssh/: README.md  setup.py
Scripts/: after.rules  docker_patch.py  image2run.sh  kill_all_process.sh  wait_for_ready.sh
Scripts/docker_patch/: docker_patch.py
Scripts/gooey/: main.py
Scripts/image2run/: image2run.sh
Scripts/kill_process/: kill_all_process.sh
Scripts/pyproject/: pyproject.toml
common/python/: calculator.py  collect_server_info.py  daily_record.py  linux_tail_f.py  walk_dir.py
common/vagrant/: READMD.md
common/vscode/: REAMD.md  launch.json  settings.json  tasks.json
common/workflows/: hexo-ci.yml
compose/portainer/: docker-compose.yml
compose/watchtower/: docker-compose.yml
composes/dbs/: README.md
composes/filesharing/: README.md
composes/mattermost/: README.md
composes/nextcloud/: README.md  docker-compose.yml
composes/portainer/: README.md  docker-compose.yml
composes/postgrest/: README.md  docker-compose.yml
composes/pypiserver/: README.md  docker-compose.yml
composes/rancher/: README.md  docker-compose.yml
composes/ward/: README.md  docker-compose.yml
composes/watchtower/: README.md  docker-compose.yml
composes/wiki/: README.md  docker-compose.yml
composes/wiz/: README.md  docker-compose.yml
dockerfiles/cloudreve/: .dockerignore  Dockerfile  README.md  docker-compose.yml
dockerfiles/cve_report/: .dockerignore  Dockerfile  REDAME.md  docker-compose.yml  requirements.txt  security_report_cmd.py  security_report_docker.py
dockerfiles/easyocr/: .dockerignore  Dockerfile  README.md
scripts/pyproject/: README.md  pyproject.toml
(+145 files in other folders)
